--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@syncfusion/ej2-react-schedule": "^23.2.4",
     "@types/node": "^20.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
